# itmo

DBMS/lab1/: lab1.sql  selectColumns.sql  selectConstraints.sql  ~$Отчет.docx  Отчет.docx
DBMS/lab2/: config.sh  create-user.sql  create_ats.sql  dbms2.docx  dictionary.sql  inits225141.ora  listener.ora  questions.sql
android development/: .gitignore
android development/Lab2_Chudakov/: settings.gradle
android development/TimerApp_Chudakov/: settings.gradle
android-development/: Android-portfolio.fig
android-development/IntentApp_Chudakov/: settings.gradle
android-development/Lab2_Chudakov/: build.gradle
android/Lab2_Chudakov/: build.gradle
intelligent systems/: ris1.docx  ris2.docx  ris3.docx  ris4.docx
intelligent-systems/: .gitignore  lab1.py  lab2.py  lab4.py  lab5.py  lab6.py  lab7.py  lab8.py  lab8_lstm.py
machine-learning/: .gitignore  extract_histogram.py  read_images_from_csv.py  task1.1.py  task1.2.py  task2.py  task3.py  task4.py  task5.py
osp/: .gitignore
osp/lab3/: .gitignore  CMakeLists.txt  Main.java  a  data.csv  data.json  file-manager.c  file-manager.h  handler.c  handler.h  lock-queue.c  lock-queue.h  lock-queueTest.h  main.c  makefile  message.c  message.h  readme.md  timer.c  timer.h
osp/lab3/test/: handlerTest.c  handlerTest.h  lock-queue.c  lock-queueTest.c  lock-queueTest.h  messageTest.c  messageTest.h  timerTest.c  timerTest.h
parallel programming/: .gitignore  report3.docx
parallel programming/lab3/: .gitignore  CMakeLists.txt  client-handler.cpp  client-handler.h  data.json  handler.c  handler.h  lock-queue.c  lock-queue.h  main.c  makefile  message-manager.c  message.h  queue.h  readme.md  timer.c  timer.h
parallel programming/lab3/test/: handlerTest.h  lock-queue.c  lock-queueTest.c  messageTest.h
parallel-programming/: .gitignore
parallel-programming/lab3/: .gitignore  CMakeLists.txt  client-handler.cpp  client-handler.h  flags.cpp  flags.h  handler.c  handler.h  lock-queue.c  lock-queue.h  main.c  makefile  queue.h  readme.md  timer.c  timer.h
parallel-programming/lab3/proto/: message.proto
parallel-programming/lab3/test/: handlerTest.c  lock-queueTest.c  messageTest.c
virtualization-technologies/: IaaS.docx  IaaS.pptx
(+234 files in other folders)
